--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=latin-ext" rel="stylesheet">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fabric.js/2.2.2/fabric.min.js"></script>
+  <!--<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>-->
 </head>
 <body>
   <app-root></app-root>
