--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>reveal.js – The HTML Presentation Framework</title>
-  <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-  <meta name="author" content="Hakim El Hattab">
+  <title>WebSocket-WebRTC-Chat</title>
+  <meta name="description" content="WebSocket-WebRTC-Chat por David Gonzalez García - UO212486">
+  <meta name="author" content="David Gonzalez García - UO212486">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
